--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,15 +144,19 @@ deploy_app_production:
           # Leer el contenido del archivo
           COMPOSE_CONTENT=$(base64 -w 0 docker-compose-production.deploy.yml)
           echo "=== DESPLEGANDO VERSIÓN ==="
-          az vm run-command invoke --command-id RunShellScript --name SPVendingAPI --resource-group SPVendingAPI_group --scripts "
+          az vm run-command invoke \
+            --command-id RunShellScript \
+            --name SPVendingAPI \
+            --resource-group SPVendingAPI_group \
+            --scripts @- <<EOF
             mkdir -p /app && cd /app
-            echo '$COMPOSE_CONTENT' | base64 -d > docker-compose-production.deploy.yml
+            echo "$COMPOSE_CONTENT" | base64 -d > docker-compose-production.deploy.yml
             echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
             docker pull $IMAGE_NAME_BASE:$DEPLOY_TAG
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
             docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
-          "
+            EOF
       else
         echo "No es un tag. Saltando despliegue."
       fi
