--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,7 +148,7 @@ deploy_app_production:
             --command-id RunShellScript \
             --name SPVendingAPI \
             --resource-group SPVendingAPI_group \
-            --scripts @- <<EOF
+            --scripts "
             mkdir -p /app && cd /app
             echo "$COMPOSE_CONTENT" | base64 -d > docker-compose-production.deploy.yml
             echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
@@ -156,7 +156,7 @@ deploy_app_production:
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
             docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
-            EOF
+            "
       else
         echo "No es un tag. Saltando despliegue."
       fi
