--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,6 +152,7 @@ deploy_app_production:
             mkdir -p /app && cd /app
             echo "$COMPOSE_CONTENT" | base64 -d > docker-compose-production.deploy.yml
             echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+            DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
             docker pull $IMAGE_NAME_BASE:$DEPLOY_TAG
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
