--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,19 +144,21 @@ deploy_app_production:
           # Leer el contenido del archivo
           COMPOSE_CONTENT=$(base64 -w 0 docker-compose-production.deploy.yml)
           echo "=== DESPLEGANDO VERSIÓN ==="
+      
           az vm run-command invoke \
             --command-id RunShellScript \
             --name SPVendingAPI \
             --resource-group SPVendingAPI_group \
-            --scripts "
+            --scripts '
             mkdir -p /app && cd /app
-            echo "$COMPOSE_CONTENT" | base64 -d > docker-compose-production.deploy.yml
-            echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+            echo '"$COMPOSE_B64"' | base64 -d > docker-compose-production.deploy.yml
+            echo "'"$CI_REGISTRY_PASSWORD"'" | docker login -u "'"$CI_REGISTRY_USER"'" --password-stdin "'"$CI_REGISTRY"'"
             DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
-            docker pull $IMAGE_NAME_BASE:$DEPLOY_TAG
+            docker pull '"$IMAGE_NAME_BASE:$DEPLOY_TAG"'
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
-            "
+            docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+            '
       else
         echo "No es un tag. Saltando despliegue."
       fi
