--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,7 +140,8 @@ deploy_app_production:
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
-          DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+          export IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
           # Leer el contenido del archivo
           COMPOSE_BASE64=$(base64 -w 0 docker-compose-production.deploy.yml)
           echo "=== DESPLEGANDO VERSIÓN ==="
@@ -150,15 +151,18 @@ deploy_app_production:
             --name SPVendingAPI \
             --resource-group SPVendingAPI_group \
             --scripts '
+      
             mkdir -p /app && cd /app
-            echo '"$COMPOSE_B64"' | base64 -d > docker-compose-production.deploy.yml
-            echo "'"$CI_REGISTRY_PASSWORD"'" | docker login -u "'"$CI_REGISTRY_USER"'" --password-stdin "'"$CI_REGISTRY"'"
-            DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
-            docker pull '"$IMAGE_NAME_BASE:$DEPLOY_TAG"'
+            echo $COMPOSE_B64 | base64 -d > docker-compose-production.deploy.yml
+  
+            echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+  
+            docker pull $IMAGE_NAME
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
-            docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
-            '
+  
+            docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'
+          "
       else
         echo "No es un tag. Saltando despliegue."
       fi
