--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,27 +142,27 @@ deploy_app_production:
       if [ -n "$CI_COMMIT_TAG" ]; then
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           export IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
-          # Leer el contenido del archivo
-          COMPOSE_BASE64=$(base64 -w 0 docker-compose-production.deploy.yml)
+          export COMPOSE_B64=$(base64 -w 0 docker-compose-production.deploy.yml)
+
           echo "=== DESPLEGANDO VERSIÓN ==="
-      
+    
           az vm run-command invoke \
             --command-id RunShellScript \
             --name SPVendingAPI \
             --resource-group SPVendingAPI_group \
-            --scripts '
+            --scripts "@-"<<'EOF'
       
             mkdir -p /app && cd /app
             echo $COMPOSE_B64 | base64 -d > docker-compose-production.deploy.yml
   
-            echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+            echo '$CI_REGISTRY_PASSWORD' | docker login -u '$CI_REGISTRY_USER' --password-stdin '$CI_REGISTRY'
   
-            docker pull $IMAGE_NAME
+            docker pull '$IMAGE_NAME'
             docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
             docker-compose -f docker-compose-production.deploy.yml up -d
   
-            docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'
-          "
+            docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+            EOF
       else
         echo "No es un tag. Saltando despliegue."
       fi
