--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ stages:
   - deploy_production
 dependency_check:
   stage: test
+  tags:
+    - test
   image: maven:3.9.6-eclipse-temurin-22
   script:
       - mvn org.owasp:dependency-check-maven:check
@@ -34,6 +36,8 @@ sonarqube:
   #image: sonarsource/sonar-scanner-cli:latest
   image: maven:3.9-eclipse-temurin-22
   stage: test
+  tags:
+    - sonar
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
   cache:
@@ -126,25 +130,22 @@ deploy_app_production:
   stage: deploy_production
   image: ubuntu:22.04
   tags:
-    - deploy
+    - azure-deploy
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
 
   before_script:
-    - apt-get update
-    - apt-get install -y curl docker.io python3-pip gettext-base openssh-client
-    - pip3 install azure-cli
-    - az login --service-principal -u "$AZURE_CLIENT_ID" -p "$AZURE_CLIENT_SECRET" --tenant "$AZURE_TENANT_ID"
-    - az account set --subscription "$AZURE_SUBSCRIPTION_ID"
-      # Configurar SSH
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - eval $(ssh-agent -s)
-    - ssh-add "$SSH_PRIVATE_KEY"
-    - ssh-keyscan -H 172.187.216.149 >> ~/.ssh/known_hosts
-
+    - # Verificar que estamos en la máquina correcta
+    - echo "=== Verificando entorno de despliegue ==="
+    - whoami
+    - pwd
+    - hostname
+    - docker --version
+    - docker-compose --version
+    - echo "=== Autenticando con GitLab Registry ==="
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [[ "$CI_COMMIT_TAG" =~ ^deploy-production-v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
@@ -152,22 +153,37 @@ deploy_app_production:
         DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
         IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
 
-        echo "=== Copiando docker-compose a la VM ==="
-        scp docker-compose-production.deploy.yml Adrian-Manuel@172.187.216.149:/home/Adrian-Manuel/
+        echo "=== Preparando despliegue ==="
+        # Crear directorio de trabajo si no existe
+        mkdir -p ~/spvending/api
+        cd ~/deployment/api
+      
+        echo "=== Copiar docker-compose desde el repositorio ==="
+        cp $CI_PROJECT_DIR/docker-compose-production.deploy.yml ./
 
-        echo "=== Ejecutando despliegue en VM ==="
-        ssh Adrian-Manuel@172.187.216.149 "
-          set -e
-          cd /home/Adrian-Manuel
-          echo \"$CI_REGISTRY_PASSWORD\" | docker login -u \"$CI_REGISTRY_USER\" --password-stdin \"$CI_REGISTRY\"
-          docker pull \"$IMAGE_NAME\"
-          docker-compose -f docker-compose-production.deploy.yml down --remove-orphans
-          docker-compose -f docker-compose-production.deploy.yml up -d
-          docker ps --format \"table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}\"
-        "     
+        echo "=== Descargando imagen $IMAGE_NAME ==="
+        docker pull "$IMAGE_NAME"
+        echo "=== Parando contenedores existentes ==="
+        docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
+        echo "=== Iniciando nuevos contenedores ==="
+        docker-compose -f docker-compose-production.deploy.yml up -d
+        echo "=== Verificando estado de contenedores ==="
+        docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        echo "=== Limpiando imágenes no utilizadas ==="
+        docker image prune -af
+        echo "=== Despliegue completado exitosamente ==="
         else
-        echo "No es un tag de despliegue. Saltando..."
+        echo "No es un tag de despliegue válido. Saltando..."
+        echo "Tag recibido: $CI_COMMIT_TAG"
+        echo "Formato esperado: deploy-production-v[X.Y.Z]"
       fi
+  after_script:
+      - docker logout $CI_REGISTRY
+      - |
+        if [ "$CI_JOB_STATUS" != "success" ]; then
+        echo "=== Logs de contenedores para debug ==="
+        docker-compose -f ~/deployment/docker-compose-production.deploy.yml logs --tail=50 || true
+        fi
 
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
