--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,7 +155,7 @@ deploy_app_production:
         echo "=== Preparando despliegue ==="
         # Crear directorio de trabajo si no existe
         mkdir -p ~/spvending/api
-        cd ~/deployment/api
+        cd ~/spvending/api
       
         echo "=== Copiar docker-compose desde el repositorio ==="
         cp $CI_PROJECT_DIR/docker-compose-production.deploy.yml ./
