--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,10 +129,11 @@ deploy_app_staging:
 deploy_app_production:
   stage: deploy_production
   tags:
-    - azure-deploy
+    - azure
   services: []
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
+    DOCKER_HOST: "unix:///var/run/docker.sock"
 
   before_script:
     # Verificar que estamos en la máquina correcta
