--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - spring-network
+      spring-network:
+        ipv4_address: 172.28.0.10
     depends_on:
       - postgres
       - redis
@@ -42,6 +43,9 @@ services:
 networks:
   spring-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
 volumes:
   postgres-volume:
 
