--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Tenants_Managment
 server.port=8080
 # Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/tenants_managment
-spring.datasource.username=postgres
-spring.datasource.password=abc123.
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Redis
-spring.data.redis.host=localhost
+spring.data.redis.host=${SPRING_REDIS_HOST}
 spring.data.redis.port=6379
 
 # Swagger openapi
@@ -41,3 +41,6 @@ sonar.projectKey=SPVendingManagement
 sonar.sources=src
 sonar.java.binaries=target/classes
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+
+#cors
+app.cors.allowed-origins=http://localhost:80
