--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,4 +43,4 @@ sonar.java.binaries=target/classes
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
 #cors
-app.cors.allowed-origins=http://localhost:80
+app.cors.allowed-origins=http://172.28.0.4
