--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_database:5432/tenants_managment
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=abc123.
-      - SPRING_REDIS_HOST=redis_cache
+      - SPRING_REDIS_HOST=redis
   redis:
     image: redis
     container_name: redis_cache
