--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables:
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_NAME_BASE: "$CI_REGISTRY/smart-vending/spvending-managment"
-  IMAGE_NAME: "$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
+  IMAGE_NAME: "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
   GIT_DEPTH: "0"
 stages:
   - test
@@ -78,8 +78,7 @@ build_image:
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
         if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
-                  docker-compose -f docker-compose.yml build --no-cache --pull
-                  docker tag spvending-api-image "$IMAGE_NAME"
+                  docker build -t "$IMAGE_NAME" .
                   docker push "$IMAGE_NAME"
           else
               echo "El tag NO proviene de main. Saltando build."
