--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ build_image:
   tags:
     - build
   before_script:
-    - echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USER" --password-stdin "$CI_REGISTRY"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
@@ -134,13 +134,6 @@ deploy_app_production:
     DOCKER_HOST: "unix:///var/run/docker.sock"
 
   before_script:
-    # Verificar que estamos en la máquina correcta
-    - echo "=== Verificando entorno de despliegue ==="
-    - whoami
-    - pwd
-    - hostname
-    - docker --version
-    - docker-compose --version
     - echo "=== Autenticando con GitLab Registry ==="
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
