--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,7 @@ deploy_app_staging:
         if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-staging-}"
           echo "=== DESPLEGANDO VERSIÓN ==="
-          docker pull "$IMAGE_NAME_BASE:$DEPLOY_TAG"
+          docker pull "$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
           docker-compose -f docker-compose-staging.deploy.yml down --remove-orphans
           docker-compose -f docker-compose-staging.deploy.yml up -d 
           echo "=== CONTENEDORES EN EJECUCIÓN ==="
@@ -132,15 +132,14 @@ deploy_app_production:
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
-
+    DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-production-}"
   before_script:
     - echo "=== Autenticando con GitLab Registry ==="
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
     - |
       if [[ "$CI_COMMIT_TAG" =~ ^deploy-production-v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-        echo "=== Iniciando despliegue para $CI_COMMIT_TAG ==="
-        export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+        echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
         IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
 
         echo "=== Preparando despliegue ==="
@@ -153,16 +152,21 @@ deploy_app_production:
 
         echo "=== Descargando imagen $IMAGE_NAME ==="
         docker pull "$IMAGE_NAME"
+      
         echo "=== Parando contenedores existentes ==="
         docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
+      
         echo "=== Iniciando nuevos contenedores ==="
         docker-compose -f docker-compose-production.deploy.yml up -d
+      
         echo "=== Verificando estado de contenedores ==="
         docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+      
         echo "=== Limpiando imágenes no utilizadas ==="
         docker image prune -af
         echo "=== Despliegue completado exitosamente ==="
-        else
+      
+      else
         echo "No es un tag de despliegue válido. Saltando..."
         echo "Tag recibido: $CI_COMMIT_TAG"
         echo "Formato esperado: deploy-production-v[X.Y.Z]"
@@ -171,8 +175,8 @@ deploy_app_production:
       - docker logout $CI_REGISTRY
       - |
         if [ "$CI_JOB_STATUS" != "success" ]; then
-        echo "=== Logs de contenedores para debug ==="
-        docker-compose -f ~/deployment/docker-compose-production.deploy.yml logs --tail=50 || true
+          echo "=== Logs de contenedores para debug ==="
+          docker-compose -f ~/deployment/docker-compose-production.deploy.yml logs --tail=50 || true
         fi
 
   rules:
