--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,7 +132,6 @@ deploy_app_production:
   variables:
     COMPOSE_PROJECT_NAME: "spvending-managment-production"
     DOCKER_HOST: "unix:///var/run/docker.sock"
-    DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-production-}"
   before_script:
     - echo "=== Autenticando con GitLab Registry ==="
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
@@ -153,6 +152,7 @@ deploy_app_production:
         docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
         
         echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
+        export DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-production-}"
         IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
       
         echo "=== Descargando imagen $IMAGE_NAME ==="
