--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,7 +152,7 @@ deploy_app_production:
         docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
         
         echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
-        export DEPLOY_TAG: "${CI_COMMIT_TAG#deploy-production-}"
+        DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
         IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
       
         echo "=== Descargando imagen $IMAGE_NAME ==="
