--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ build_image:
     - |
       if [ -n "$CI_COMMIT_TAG" ]; then
         git fetch origin main
-        if git branch -r --contains "$CI_COMMIT_TAG" | grep -q "origin/main"; then
+        if git branch -r --contains "$CI_COMMIT_SHA" | grep -q "origin/main"; then
                   docker build -t "$IMAGE_NAME" .
                   docker push "$IMAGE_NAME"
           else
@@ -139,40 +139,44 @@ deploy_app_production:
     - |
       if [[ "$CI_COMMIT_TAG" =~ ^deploy-production-v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
         
-
-        echo "=== Preparando despliegue ==="
-        # Crear directorio de trabajo si no existe
-        mkdir -p ~/spvending/api
-        cd ~/spvending/api
-      
-        echo "=== Copiar docker-compose desde el repositorio ==="
-        cp $CI_PROJECT_DIR/docker-compose-production.deploy.yml ./
-
-        echo "=== Parando contenedores existentes ==="
-        docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
+        if git branch --contains "$CI_COMMIT_SHA" | grep -q "main"; then
+          echo "=== Preparando despliegue ==="
+          # Crear directorio de trabajo si no existe
+          mkdir -p ~/spvending/api
+          cd ~/spvending/api
         
-        echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
-        export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
-        IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
-      
-        echo "=== Descargando imagen $IMAGE_NAME ==="
-        docker pull "$IMAGE_NAME"
-      
-        echo "=== Iniciando nuevos contenedores ==="
-        docker-compose -f docker-compose-production.deploy.yml up -d
-      
-        echo "=== Verificando estado de contenedores ==="
-        docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
-      
-        echo "=== Limpiando imágenes no utilizadas ==="
-        docker image prune -af
-        echo "=== Despliegue completado exitosamente ==="
-        exit 0
+          echo "=== Copiar docker-compose desde el repositorio ==="
+          cp $CI_PROJECT_DIR/docker-compose-production.deploy.yml ./
+  
+          echo "=== Parando contenedores existentes ==="
+          docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
+          
+          echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
+          export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
+          IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
+        
+          echo "=== Descargando imagen $IMAGE_NAME ==="
+          docker pull "$IMAGE_NAME"
+        
+          echo "=== Iniciando nuevos contenedores ==="
+          docker-compose -f docker-compose-production.deploy.yml up -d
+        
+          echo "=== Verificando estado de contenedores ==="
+          docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+        
+          echo "=== Limpiando imágenes no utilizadas ==="
+          docker image prune -af
+          echo "=== Despliegue completado exitosamente ==="
+          exit 0
+        else
+          echo "El tag NO proviene de main. Saltando despliegue."
+          exit 1
+        fi
       else
         echo "No es un tag de despliegue válido. Saltando..."
         echo "Tag recibido: $CI_COMMIT_TAG"
         echo "Formato esperado: deploy-production-v[X.Y.Z]"
-        exit 0
+        exit 1
       fi
   after_script:
       - docker logout $CI_REGISTRY
