--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -138,8 +138,8 @@ deploy_app_production:
   script:
     - |
       if [[ "$CI_COMMIT_TAG" =~ ^deploy-production-v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-        
-        if git branch --contains "$CI_COMMIT_SHA" | grep -q "main"; then
+        git fetch origin main
+        if git branch -r --contains "$CI_COMMIT_SHA" | grep -q "origin/main"; then
           echo "=== Preparando despliegue ==="
           # Crear directorio de trabajo si no existe
           mkdir -p ~/spvending/api
