--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,16 +72,13 @@ dast:
   tags:
     - test
   stage: test
-  image: sullo/nikto
+  image: curlimages/curl:latest
   variables:
     DAST_WEBSITE: "http://172.187.216.149:8082/" # Cambia esto a tu URL
   script:
-    - echo "=== Iniciando DAST con OWASP ZAP ==="
-    - nikto -host $DAST_WEBSITE -output nikto_report.txt
-  artifacts:
-    paths:
-      - nikto_report.txt
-    when: always
+    - echo "=== Iniciando análisis DAST con BeagleSecurity ==="
+      - >curl --request POST --url https://api.beaglesecurity.com/v1/applications/$APPLICATION_TOKEN/start-test --header "Authorization: Bearer $ACCESS_TOKEN"
+
 
 build_image:
   stage: build
