--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,8 +79,8 @@ dast:
     - echo "=== Iniciando análisis DAST con BeagleSecurity ==="
     - |
         curl --request POST \
-        --url https://api.beaglesecurity.com/v1/applications/$APPLICATION_TOKEN/start-test \
-        --header "Authorization: Bearer $ACCESS_TOKEN"
+        --url https://api.beaglesecurity.com/v1/applications/$DAST_APPLICATION_TOKEN/start-test \
+        --header "Authorization: Bearer $DAST_ACCESS_TOKEN"
 
 
 build_image:
