--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,12 @@
 image: docker:latest
-
+include:
+  - template: DAST.gitlab-ci.yml
 variables:
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_NAME_BASE: "$CI_REGISTRY/smart-vending/spvending-managment"
   IMAGE_NAME: "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
+  DAST_WEBSITE: "https://spvending.uksouth.cloudapp.azure.com"
   GIT_DEPTH: "0"
 stages:
   - test
@@ -191,3 +193,7 @@ deploy_app_production:
   rules:
     - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
 
+dast:
+  stage: dast
+  rules:
+    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
