--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -198,6 +198,7 @@ dast_scan:
     - apt-get update && apt-get install -y owasp-zap
     - zap.sh -cmd -port 8080 -host 0.0.0.0 -daemon
     - echo "=== Iniciando análisis DAST ==="
+    - sleep 10 # Wait for ZAP to start
     - zap-baseline.py -t $DAST_WEBSITE -r zap_report.html
   artifacts:
     paths:
@@ -205,5 +206,4 @@ dast_scan:
     reports:
       dast: zap_report.html
   rules:
-    - if: $CI_COMMIT_TAG=~ /^v\d+\.\d+\.\d+$/
-      when: always
+    - if: $CI_COMMIT_TAG=~ /^deploy-production-v\d+\.\d+\.\d+$/
