--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,9 +194,9 @@ deploy_app_production:
 
 dast_scan:
   stage: dast
-  image: owasp/zap2docker-stable
+  image: ghcr.io/zaproxy/zaproxy:stable
   script:
-    - zap.sh -cmd -port 8082 -host 0.0.0.0 -daemon
+    - zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true
     - echo "=== Iniciando análisis DAST ==="
     - sleep 10 # Wait for ZAP to start
     - zap-baseline.py -t $DAST_WEBSITE -r zap_report.html
