--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,7 +199,7 @@ dast_scan:
     - zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true
     - echo "=== Iniciando análisis DAST ==="
     - sleep 10 # Wait for ZAP to start
-    - zap-baseline.py -t $DAST_WEBSITE -r zap_report.html
+    - zap-baseline.py -t $DAST_WEBSITE -r zap_report.html -o .
   artifacts:
     paths:
       - zap_report.html
