--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -149,7 +149,7 @@ deploy_app_production:
   
           echo "=== Parando contenedores existentes ==="
           docker-compose -f docker-compose-production.deploy.yml down --remove-orphans || true
-          
+          docker rmi registry.smartpadelautomation.com/smart-vending/spvending-managment:v1.0.0
           echo "=== Iniciando despliegue para $CI_COMMIT_TAG ===" 
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
