--- a/docker-compose-production.deploy.yml
+++ b/docker-compose-production.deploy.yml
@@ -1,6 +1,6 @@
 services:
   spvending-api-image-production:
-    image: ${CI_REGISTRY_IMAGE}:${DEPLOY_TAG}
+    image: $CI_REGISTRY_IMAGE:${DEPLOY_TAG}
     container_name: spvending-api-production-container
     ports:
       - "8082:8080"
