--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -154,7 +154,7 @@ deploy_app_production:
           export DEPLOY_TAG="${CI_COMMIT_TAG#deploy-production-}"
           IMAGE_NAME="$CI_REGISTRY_IMAGE:$DEPLOY_TAG"
           
-          docker rmi "$CI_REGISTRY_IMAGE:${DEPLOY_TAG}" || true
+          docker rmi "$IMAGE_NAME" || true
       
           echo "=== Iniciando despliegue para $CI_COMMIT_TAG ==="
           echo "Tag limpio: $DEPLOY_TAG"
